crates/toml/tests/snapshots/invalid/float/exp-trailing-us-01.stderr
TOML parse error at line 1, column 23
  |
1 | exp-trailing-us-01 = 1_e2
  |                       ^
`_` may only go between digits, expected nothing
